--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -14,8 +14,10 @@ operation::verify-test/success[snippets='http-request,http-response']
 
 [[User-회원가입]]
 === User 회원가입
-operation::sign-up-test/success[snippets='http-request,http-response']
+operation::회원가입[snippets='http-request,request-fields,http-response,response-fields']
+
+
 
 [[User-로그인]]
 === User 로그인
-operation::sign-in-test/success[snippets='http-request,http-response']
+operation::로그인[snippets='http-request,request-fields,http-response,response-fields']
