--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,7 +1,7 @@
 :doctype: book
 :icons: font
-:source-highlighter: highlightjs // 문서에 표기되는 코드들의 하이라이팅을 highlightjs를 사용
-:toc: left // toc (Table Of Contents)를 문서의 좌측에 두기
+:source-highlighter: highlightjs
+:toc: left
 :toclevels: 2
 :sectlinks:
 
@@ -9,17 +9,27 @@
 == User API
 
 [[User-회원_인증번호_발송]]
-=== User 회원 인증번호 발송
-operation::verify-test/success[snippets='http-request,http-response']
+===  회원 인증번호 발송
+operation::인증번호 발송[snippets='http-request,http-response']
 
 [[User-회원가입]]
-=== User 회원가입
+===  회원가입
 operation::회원가입[snippets='http-request,request-fields,http-response,response-fields']
 
 [[User-로그인]]
-=== User 로그인
+===  로그인
 operation::로그인[snippets='http-request,request-fields,http-response,response-fields']
 
 [[User-로그아웃]]
-=== User 로그아웃
+===  로그아웃
 operation::로그아웃[snippets='http-request,request-fields,http-response']
+
+
+[[User-푸시_토큰_싱크]]
+===  푸시_토큰_싱크
+operation::푸시 토큰 싱크[snippets='http-request,request-fields,http-response']
+
+
+[[User-피로도_싱크]]
+===  피로도_싱크
+operation::푸시 토큰 싱크[snippets='http-request,request-fields,http-response']
