--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -24,11 +24,9 @@ operation::로그인[snippets='http-request,request-fields,http-response,respons
 ===  로그아웃
 operation::로그아웃[snippets='http-request,request-fields,http-response']
 
-
 [[User-푸시_토큰_싱크]]
 ===  푸시_토큰_싱크
 operation::푸시 토큰 싱크[snippets='http-request,request-fields,http-response']
-
 
 [[User-피로도_싱크]]
 ===  피로도_싱크
@@ -41,12 +39,9 @@ operation::푸시 토큰 싱크[snippets='http-request,request-fields,http-respo
 [[Buddy-API]]
 == Buddy API
 
-
 [[Buddy-친구_사귀기]]
 ===  친구 사귀기
-operation::친구 사귀기[snippets='http-request,request-headers,path-parameters,http-response']
-
-
+operation::친구 사귀기[snippets='http-request,request-headers,http-response']
 
 [[Buddy-내_친구들]]
 ===  내 친구들
@@ -54,9 +49,13 @@ operation::내 친구들[snippets='http-request,request-headers,path-parameters,
 
 [[Buddy-경험치_조정]]
 ===  경험치 조정
-operation::경험치 조정[snippets='http-request,request-headers,path-parameters,http-response']
+operation::경험치 조정[snippets='http-request,request-headers,http-response']
 
 [[Buddy-메인_버디_설정]]
 ===  메인 버디 설정
 operation::메인 버디 설정[snippets='http-request,request-headers,http-response']
+
+[[Buddy-버디_도감]]
+===  버디 도감
+operation::버디 도감[snippets='http-request,request-headers,path-parameters,http-response']
 
